# zero2prod

./: .env  .envrc  Cargo.toml  README.md  docker-compose.yml  run
newsletter/: Cargo.toml
newsletter/src/: lib.rs  main.rs
newsletter/tests/: base.rs  health.rs
scripts/: _cli.sh
src/: main.rs  tests.rs
tests/: health.rs  subscribe.rs
