[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "newsletter"
path = "src/main.rs"

[dependencies]
actix-web = "4.9.0"
reqwest = { version = "0.12.7", features = ["blocking", "json", "multipart"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
sqlx = { version = "0.8.1", features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
