[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "newsletter"
path = "src/main.rs"

[dependencies]
actix-web = "4.9.0"
reqwest = { version = "0.12.7", features = ["blocking", "json", "multipart"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
